--- a/PycharmProjects/ecommerce/templates/home_page.html
+++ b/PycharmProjects/ecommerce/templates/home_page.html
@@ -11,7 +11,19 @@
     </head>
     <body>
     <div class='text-center'>
+       <p>{{ title }}</p>
     <h1>Hello, world!</h1>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                {{ content }}
+            </div>
+
+        </div>
+
+
     </div>
 
     <!-- Optional JavaScript -->
