--- a/PycharmProjects/ecommerce/templates/view.html
+++ b/PycharmProjects/ecommerce/templates/view.html
@@ -1,40 +1,4 @@
-from django.shortcuts import render
-
-# Create your views here.
-
-from django.http import HttpResponse
-from django.shortcuts import render
-from .forms import ContactForm
-
-def home_page(request):
-    context={
-        "title":"home page",
-        "content":"welcome to the home page"
-    }
-    return render(request, "home_page.html", context)
-
-def about_page(request):
-    context = {
-        "title": "about page",
-        "content":"welcome to the about page"
-    }
-    return render(request, "home_page.html", context)
-
-def contact_page(request):
-    contact_form = ContactForm()
-    context = {
-        "title": "contact page",
-        "content":"welcome to the contact page",
-        "form": contact_form
-    }
-    if request.method == "POST":
-        print(request.POST.get('fullname'))
-    return render(request, "view.html", context)
-
-
-def home_page_old(request):
-    html_="""
-    <!doctype html>
+ <!doctype html>
     <html lang="en">
     <head>
     <title>Hello, world!</title>
@@ -47,7 +11,26 @@ def home_page_old(request):
     </head>
     <body>
     <div class='text-center'>
+       <p>{{ title }}</p>
     <h1>Hello, world!</h1>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <p> {{ content }}</p>
+                <div class="col-sm-6 col-12">
+                    <form method="POST">{% csrf_token %}
+                        {{ form }}
+
+                    </form>
+
+                </div>
+            </div>
+
+        </div>
+
+
     </div>
 
     <!-- Optional JavaScript -->
@@ -57,6 +40,3 @@ def home_page_old(request):
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     </body>
     </html>
-    """
-
-    return HttpResponse(html_)
